--- a/GoilacoPj/Views/Home/Index.cshtml
+++ b/GoilacoPj/Views/Home/Index.cshtml
@@ -68,4 +68,20 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Page17">Page17</a>
     </div>
 
+    <div class="col-1">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Page18">Page18</a>
+    </div>
+
+    <div class="col-1">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Page19">Page19</a>
+    </div>
+
+    <div class="col-1">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Page20">Page20</a>
+    </div>
+
+    <div class="col-1">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Page21">Page21</a>
+    </div>
+
 </div>
