--- a/GoilacoPj/Views/Home/Page3.cshtml
+++ b/GoilacoPj/Views/Home/Page3.cshtml
@@ -1,8 +1,8 @@
-﻿
-@section Styles
+﻿@section Styles
 {
-    <link href="~/css/Home/Page2.css" rel="stylesheet" />
+    <link href="~/css/Home/Page3.css" rel="stylesheet" />
 }
+
 
 <div class="page-background">
 
@@ -104,7 +104,7 @@
         <div id="month12" class="month" style="--i: 7;">
             <img src="~/assets/img/Dao/DaoThang12.png" alt="Tháng 1">
             <div class="text">
-                <div class="labelblacktext">Đảo cờ<br /><span>Tháng 12</span></div>
+                <div class="labelblacktext">Đảo cờ<br/><span>Tháng 12</span></div>
                 <div class="labelredtext">đích đến</div>
             </div>
             <div class="tuiTien12">
@@ -135,5 +135,5 @@
 
 @section Scripts
 {
-    <script src="~/js/Home/Page2.js"></script>
+    <script src="~/js/Home/Page3.js"></script>
 }
