--- a/GoilacoPj/Views/Home/Page1.cshtml
+++ b/GoilacoPj/Views/Home/Page1.cshtml
@@ -1,298 +1,135 @@
 ﻿
 @section Styles
 {
-    <link href="~/css/Page1.css" rel="stylesheet" />
+    <link href="~/css/Home/Page1.css" rel="stylesheet" />
 }
 
-<div class="b1-background">
+<div class="page-background">
 
-    <div class="d-flex justify-content-center gap-3 mt-3" style="height: 50px; margin-left: 200px;">
+    @await Html.PartialAsync("~/Views/Shared/_headerNav.cshtml")
 
-        <div class="navitem">
-            bản đồ <span>kho báu</span>
-        </div>
-
-        <div class="navitem">
-            Hiệu suất <span>công việc</span>
-        </div>
-
-        <div class="navitem">
-            kết quả <span>thi đua</span>
-        </div>
-
-        <div class="navitem">
-            Nhiện vụ và<span>liên lạc</span>
-        </div>
-
-        <div class="navitem">
-            Tin tức <span>nội bộ</span>
-        </div>
-
-        <div class="navitem">
-            Tranning
-        </div>
-
-        <div class="navitem">
-            Bảng <span>thành tích</span>
-        </div>
-
-        <div>
-            <img src="~/image/Others/EarthIcon.png" alt="">
-        </div>
-
-    </div>
-
-    <div class="d-flex">
-
-        <div class="">
-
-            <div class="d-flex mt-5" style="height: 30vh;">
-
-                <div class="letterBg">
-                    <div class="letterBgContent">
-                        <div class="redtext">mục tiêu</div>
-                        <div class="blacktext">Doanh thu</div>
-                        <div class="blacktext">6 tỷ</div>
-                        <div class="blacktext">Chi phí</div>
-                        <div class="blacktext">1 tỷ</div>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-column justify-content-end" style="margin-bottom: 30px;">
-                    <div class="co12">
-                        <img src="~/image/Dao/6.png" style="width: 120px; height: auto;">
-                    </div>
-                    <div class="dao12">
-                        <img src="~/image/Dao/3.png" style="width: 220px; height: auto;">
-                    </div>
-                </div>
-
-                <div class="text12">
-                    <div class="blacktext mb-2" style="font-size: 1.2em;">
-                        <span> Đảo cờ</span>
-                        <p>tháng 12</p>
-                    </div>
-                    <div>
-                        <div class="redtext" style="font-size: 1.2em;">đích đến</div>
-                        <div class="d-flex justify-content-end">
-                            <img src="~/image/Dao/12.png" style="width: 20px; height: auto;">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-column" style="margin-top: 100px; margin-left: 70px;">
-                    <div class="co11">
-                        <img src="~/image/Dao/1.png" style="width: 50px; height: auto;">
-                    </div>
-                    <div class="dao11">
-                        <img src="~/image/Dao/5.png" style="width: 180px; height: auto;">
-                    </div>
-
-                    <div class="d-flex justify-content-start">
-                        <img src="~/image/Dao/12.png" style="width: 20px; height: auto;">
-                    </div>
-
-                    <div class="d-flex justify-content-center">
-                        <img src="~/image/Dao/2.png" style="width: 20px; height: auto;">
-                    </div>
-                </div>
-
-                <div class="text11">
-
-                    <div class="d-flex flex-column labelblacktext mb-3">
-                        <div>đào đá</div>
-                        <div>tháng 11</div>
-                    </div>
-                    
-                    <div class="d-flex justify-content-end">
-                        <img src="~/image/Dao/12.png" style="width: 20px; height: auto;">
-                    </div>
-
-                </div>
-
-                <div class="d-flex flex-column" style="margin-top: 140px; margin-left: 20px;">
-                    <div class="co10">
-                        <img src="~/image/Dao/13.png" style="width: 30px; height: auto;">
-                    </div>
-                    <div class="dao10">
-                        <img src="~/image/Dao/4.png" style="width: 100px; height: auto;">
-                    </div>
-                    <div class="d-flex justify-content-center mt-2">
-                        <img src="~/image/Dao/12.png" style="width: 30px; height: auto;">
-                    </div>
-                    
-                </div>
-
-                <div class="text10">
-
-                    <div class="d-flex flex-column labelblacktext">
-                        <div>đào dứa</div>
-                        <div>tháng 10</div>
-                    </div>
-
-                </div>
-
-                @* <div style="margin-left: 230px;">
-                    <div class="redNormalText">Thời gian</div>
-                    <div class="redNormalText">15:04:00</div>
-                    <div class="d-flex gap-2 justify-content-center align-items-center mt-3">
-                        <div>
-                            <img src="~/image/Others/MatTroi.png" style="width: 40px; height: auto;">
-                        </div>
-                        <div class="redtext boxThoiTiet">Dự báo thời tiết</div>
-                    </div>
-                </div> *@
-
-            </div>
-
-            <div class="d-flex justify-content-between" style="height: 30vh;">
-                <div>
-                    <div class="d-flex gap-3 align-items-center" style="margin-left: 50px;">
-                        <div>
-                            <img src="~/image/Others/DaoCaHeo.png" style="width: 100px; height: auto;">
-                        </div>
-                        <div class="labelblacktext">
-                            <div>Đảo Cá Heo</div>
-                            <span>Tháng 1</span>
-                        </div>
-                    </div>
-
-                    <div class="d-flex gap-3 align-items-center" style="margin-left: 80px;">
-                        <div>
-                            <img src="~/image/Others/DaoThang2.png" style="width: 100px; height: auto;">
-                        </div>
-                        <div class="labelblacktext">
-                            <div>Đảo Làng</div>
-                            <span>Tháng 2</span>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="d-flex justify-content-end">
-
-                    <div>
-                        <div class="d-flex gap-3 align-items-center" style="margin-left: 400px;">
-                            <div>
-                                <img src="~/image/Dao/10.png" style="width: 80px; height: auto;">
-                            </div>
-                            <div class="labelblacktext">
-                                <div>Đảo Ngọc Trai</div>
-                                <span>Tháng 9</span>
-                            </div>
-                        </div>
-
-                        <div class="d-flex gap-3 align-items-center" style="margin-left: 250px;">
-                            <div>
-                                <img src="~/image/Dao/2.png" style="width: 20px; height: auto;">
-                            </div>
-                            <div>
-                                <img src="~/image/Dao/8.png" style="width: 160px; height: auto;">
-                            </div>
-                            <div class="d-flex flex-column align-items-center labelblacktext">
-                                <div>Đảo Hòn Rùa</div>
-                                <span>Tháng 8</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    
-                </div>
-            </div>
-
-            <div class="d-flex">
-                <div style="margin-left: 120px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 3</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Others/DaoThang3.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
-                <div style="margin-left: 50px; margin-top: 20px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 4</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Others/DaoThang4.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
-                <div style="margin-left: 50px; margin-top: 20px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 5</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Others/DaoThang5.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
-                <div style="margin-left: 50px; margin-top: 20px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 6</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Others/DaoThang6.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
-                <div style="margin-left: 50px; margin-top: 20px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 7</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Others/DaoThang7.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
-                <div style="margin-left: 50px; margin-top: 0px;">
-                    <div>
-                        <img src="~/image/Others/cano.png" style="width: 80px; height: auto;">
-                    </div>
-                </div>
-
+    <!-- Phần chính chứa các đảo -->
+    <div class="ellipse-container">
+        <div id="month1" class="month" style="--i: 6;">
+            <img src="~/assets/img/Dao/DaoCaHeo.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo cá heo</div>
+                <div class="labelblacktext">tháng 1</div>
             </div>
         </div>
-
-        <div class="d-flex flex-column justify-content-between align-items-center flex-grow-1">
-            
-            <div class="d-flex flex-column align-items-center" style="margin-left: 150px; margin-top: 28px;">
-                <div class="redNormalText">Thời gian</div>
-                <div class="redNormalText">15:04:00</div>
-                <div class="d-flex gap-2 justify-content-center align-items-center mt-3">
-                    <div>
-                        <img src="~/image/Others/MatTroi.png" style="width: 40px; height: auto;">
-                    </div>
-                    <div class="redtext boxThoiTiet">Dự báo thời tiết</div>
-                </div> 
+        <div id="month2" class="month" style="--i: 5;">
+            <img src="~/assets/img/Dao/DaoThang2.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo làng</div>
+                <div class="labelblacktext">tháng 2</div>
             </div>
-
-            <div class="d-flex flex-column gap-3 align-items-start" style="margin-left: 200px;">
-
-                <div class="DaoRuaBg">
-                    <div class="DaoRuaContent mt-2">
-                        <div>Mục tiêu: 200 triệU</div>
-                        <div>Chi phí: 50 triệu</div>
-                    </div>
+        </div>
+        <div id="month3" class="month" style="--i: 4;">
+            <img src="~/assets/img/Dao/DaoThang3.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo làng</div>
+                <div class="labelblacktext">tháng 3</div>
+            </div>
+        </div>
+        <div id="month4" class="month" style="--i: 3;">
+            <img src="~/assets/img/Dao/DaoThang4.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo đồi</div>
+                <div class="labelblacktext">tháng 4</div>
+            </div>
+        </div>
+        <div id="month5" class="month" style="--i: 2;">
+            <img src="~/assets/img/Dao/DaoThang5.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo bình minh</div>
+                <div class="labelblacktext">tháng 5</div>
+            </div>
+        </div>
+        <div id="month6" class="month" style="--i: 1;">
+            <img src="~/assets/img/Dao/DaoThang6.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo bình minh</div>
+                <div class="labelblacktext">tháng 6</div>
+            </div>
+        </div>
+        <div id="month7" class="month" style="--i: 0;">
+            <img src="~/assets/img/Dao/DaoThang7.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo thạch anh</div>
+                <div class="labelblacktext">tháng 7</div>
+            </div>
+        </div>
+        <div id="cano" class="month" style="--i: 11;">
+            <img src="~/assets/img/Dao/cano.png" alt="Tháng 1">
+        </div>
+        <div id="month8" class="month" style="--i: 11;">
+            <img src="~/assets/img/Dao/DaoThang8.png" alt="Tháng 1">
+        </div>
+        <div id="month9" class="month" style="--i: 10;">
+            <img src="~/assets/img/Dao/DaoThang9.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo ngọc trai</div>
+                <div class="labelblacktext">tháng 9</div>
+            </div>
+        </div>
+        <div id="month10" class="month" style="--i: 9;">
+            <img src="~/assets/img/Dao/DaoThang10.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo dừa</div>
+                <div class="labelblacktext">tháng 10</div>
+            </div>
+            <div class="tuiTien">
+                <img src="~/assets/img/Dao/12.png" alt="Alternate Text" />
+            </div>
+        </div>
+        <div id="month11" class="month" style="--i: 8;">
+            <img src="~/assets/img/Dao/DaoThang11.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo đá</div>
+                <div class="labelblacktext">tháng 11</div>
+            </div>
+            <div class="tuiTien1">
+                <img src="~/assets/img/Dao/12.png" alt="Alternate Text" />
+            </div>
+            <div class="tuiTien2">
+                <img src="~/assets/img/Dao/12.png" alt="Alternate Text" />
+            </div>
+            <div class="tuiTien3">
+                <img src="~/assets/img/Dao/12.png" alt="Alternate Text" />
+            </div>
+            <div class="dauLau">
+                <img src="~/assets/img/Dao/DauLau.png" alt="Alternate Text" />
+            </div>
+        </div>
+        <div id="month12" class="month" style="--i: 7;">
+            <img src="~/assets/img/Dao/DaoThang12.png" alt="Tháng 1">
+            <div class="text">
+                <div class="labelblacktext">Đảo cờ<br /><span>Tháng 12</span></div>
+                <div class="labelredtext">đích đến</div>
+            </div>
+            <div class="tuiTien12">
+                <img src="~/assets/img/Dao/12.png" alt="Alternate Text" />
+            </div>
+        </div>
+        <div id="notify" class="month" style="--i: 7;">
+            @* <img src="~/assets/img/Dao/14.png" alt="Tháng 1"> *@
+            <div class="letterBg">
+                <div class="letterBgContent">
+                    <div class="labelredtext">mục tiêu</div>
+                    <div class="blacktext">Doanh thu</div>
+                    <div class="blacktext">6 tỷ</div>
+                    <div class="blacktext">Chi phí</div>
+                    <div class="blacktext">1 tỷ</div>
                 </div>
-
-                <div style="margin-left: 200px;">
-                    <div>
-                        <img src="~/image/Dao/17.png" style="width: 90%; height: auto;">
-                    </div>
-                </div> 
-
             </div>
-
         </div>
     </div>
 
+    <!-- Phần biểu đồ phần trăm của các bộ phận -->
+    <div class="row ship-stats">
+        <div class="boong">Bộ phận Boong: 50%</div>
+        <div class="may">Bộ phận Máy: 70%</div>
+    </div>
 
 </div>
 
@@ -301,31 +138,3 @@
     <script src="~/js/Home/Page1.js"></script>
 }
 
-
-@* <div class="DaoRuaBg">
-    <div class="DaoRuaContent mt-2">
-        <div>Mục tiêu: 200 triệU</div>
-        <div>Chi phí: 50 triệu</div>
-    </div>
-</div> *@
-
-@* <div style="margin-left: 230px;">
-    <div class="redNormalText">Thời gian</div>
-    <div class="redNormalText">15:04:00</div>
-    <div class="d-flex gap-2 justify-content-center align-items-center mt-3">
-        <div>
-            <img src="~/image/Others/MatTroi.png" style="width: 40px; height: auto;">
-        </div>
-        <div class="redtext boxThoiTiet">Dự báo thời tiết</div>
-    </div>
-</div> *@
-
-@* <div style="margin-left: 330px; margin-bottom: 100px;">
-                    <div class="labelblacktext">
-                        <div>Đảo Làng</div>
-                        <span>Tháng 7</span>
-                    </div>
-                    <div>
-                        <img src="~/image/Dao/17.png" style="width: 300px; height: auto;">
-                    </div>
-                </div> *@
