--- a/GoilacoPj/Views/Home/Page17.cshtml
+++ b/GoilacoPj/Views/Home/Page17.cshtml
@@ -36,7 +36,8 @@
     </div>
 
     <div class="row">
-        <table class="table mt-3">
+        <div class="table-responsive">
+            <table class="table mt-3">
             <tbody>
                 <tr>
                     <td>
@@ -120,6 +121,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
 
     <div class="row">
