--- a/GoilacoPj/wwwroot/css/Home/Page15.css
+++ b/GoilacoPj/wwwroot/css/Home/Page15.css
@@ -7,11 +7,6 @@
     padding: 1.5rem;
 }
 
-
-.b1-container {
-    width: 95%;
-}
-
 .search-container {
     position: relative;
     max-width: 600px; 
@@ -19,9 +14,9 @@
 
 .search-input {
     width: 100%;
-    padding: 6px 40px 6px 20px; 
-    border: 1px solid #ccc; 
-    border-radius: 10px; 
+    padding: 6px 20px 6px 30px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
     text-indent: 20px;
 }
 
@@ -49,8 +44,7 @@
 {
     display: flex; 
     justify-content: center;
-    padding: 5px 0px;
-    width: 150px;
+    padding: 5px 20px;
     border-radius: 10px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
@@ -62,6 +56,27 @@
     height: 20px;
     background-color: #fcbb65;
     border-radius: 50%;
+}
+
+.card-header {
+    padding: 5px 1rem !important;
+}
+
+@media (min-width: 1190px) {
+    .row2 {
+        position: relative;
+        top: -80px;
+    }
+
+    .titleHeader {
+        display: flex;
+        justify-content: end;
+        margin-bottom: 10px;
+    }
+
+    .rowHeader {
+        justify-content: end;
+    }
 }
 
 
