--- a/GoilacoPj/Views/Home/Page11.cshtml
+++ b/GoilacoPj/Views/Home/Page11.cshtml
@@ -111,13 +111,13 @@
                         <div class="d-flex flex-column justify-content-center">
                             <div class="redtext">2:00:00</div>
                             <div>
-                                <img src="~/assets/img/Others/Hourglass.jpg" style="width: 50px; height: auto;" />
+                                <img src="~/assets/img/Others/Hourglass.png" style="width: 50px; height: auto;" />
                             </div>
                         </div>
 
                         <div style="margin-top: 25px;">
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </div>
 
@@ -167,7 +167,7 @@
                             </td>
                             <td>
                                 <a href="#" style="display: inline-block;">
-                                    <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                    <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                                 </a>
                             </td>
                         </tr>
@@ -190,7 +190,7 @@
                             </td>
                             <td>
                                 <a href="#" style="display: inline-block;">
-                                    <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                    <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                                 </a>
                             </td>
                         </tr>
@@ -212,7 +212,7 @@
                             </td>
                             <td>
                                 <a href="#" style="display: inline-block;">
-                                    <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                    <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                                 </a>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                             </td>
                             <td>
                                 <a href="#" style="display: inline-block;">
-                                    <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                    <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                                 </a>
                             </td>
                         </tr>
