--- a/GoilacoPj/Views/Home/Page12.cshtml
+++ b/GoilacoPj/Views/Home/Page12.cshtml
@@ -139,13 +139,13 @@
                         <div class="d-flex flex-column justify-content-center">
                             <div class="redtext">2:00:00</div>
                             <div>
-                                <img src="~/assets/img/Others/Hourglass.jpg" style="width: 45px; height: auto;" />
+                                <img src="~/assets/img/Others/Hourglass.png" class="img-fluid" style="width: 45px; height: auto;" />
                             </div>
                         </div>
 
                         <div style="margin-top: 25px;">
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 45px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 45px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </div>
 
@@ -195,7 +195,7 @@
                         </td>
                         <td>
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </td>
                     </tr>
@@ -218,7 +218,7 @@
                         </td>
                         <td>
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </td>
                     </tr>
@@ -240,7 +240,7 @@
                         </td>
                         <td>
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </td>
                     </tr>
@@ -262,7 +262,7 @@
                         </td>
                         <td>
                             <a href="#" style="display: inline-block;">
-                                <img src="~/assets/img/Others/ArrowRight.jpg" style="width: 50px; height: auto;" alt="Arrow Link"/>
+                                <img src="~/assets/img/Others/ArrowRight.png" style="width: 50px; height: auto;" alt="Arrow Link"/>
                             </a>
                         </td>
                     </tr>
